--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-    <title>CodePen - USC Schedule</title>
+    <title>Schedule changer</title>
 </head>
 <body translate="no">
     <form class="hero__form" autocomplete="off">
